# Movie_Expert

./: .gitignore  README.md  api.py  main.py  pyproject.toml
frontend/: index.html
frontend/src/: App.css  App.jsx  index.css
